--- a/css/style.css
+++ b/css/style.css
@@ -9,12 +9,14 @@
     --border:.2rem solid var(--green);
 }
 
+a{
+    color: inherit;
+}
 *{
     font-family: 'Poppins', sans-serif;
     margin:0; padding: 0;
     box-sizing: border-box;
     outline: none; border: none;
-    text-transform: capitalize;
     transition: all .2s ease-out;
     text-decoration: none;
 }
