--- a/css/style.css
+++ b/css/style.css
@@ -501,6 +501,7 @@ iframe{
 }
 
 .last{
+	width: 90%;
     display:grid;
     grid-gap:30px;
     grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
